--- a/npcs/Races Classes and Subclasses/feats.yaml
+++ b/npcs/Races Classes and Subclasses/feats.yaml
@@ -25,6 +25,10 @@
    - content: +1 in Con. or Wis., proficiency with cook's utensils and cook special food to regain hp.
    - title: Competent
    - content: +1 in one ability and you gain proficiency in one skill using this ability.
+   - title: Contortionist
+   - content: Prerequisite - Dexterity 13 or Higher. You’ve developed an unimaginable level of flexibility and can contort your muscles disturbingly. You gain the following benefits - Increase your Dexterity score by 1, to a 
+              maximum of 20, You can gain an extra 5ft of reach when using weapons without the reach or two-handed property. As an action, you can make yourself one size smaller than your current size. You can only use an action
+              or a bonus action while small.
    - title: Crossbow Expert
    - content: You ignore the loading property of crossbows and don't have disadvantage for being in contact with a creature when you shoot.
    - title: Crusher
@@ -85,6 +89,8 @@
    - content: Prerequisite - Proficiency with medium armor. +1 in Str. and you gain proficiency with heavy armor.
    - title: Heavy Armor Master
    - content: Prerequisite - Proficiency with heavy armor. +1 in Str. and bludgeoning, piercing, and slashing damage are reduced by 3 if you are wearing an heavy armor.
+   - title: Indefinite Madness
+   - content: Gains a new character flaw from the Indefinite Madness table that lasts until cured.
    - title: Infernal Constitution
    - content: Prerequisite - Tiefling. +1 in Con., resistance to cold and poison damage, and you have advantage on saving throws against being poisoned.
    - title: Inspiring Leader
