--- a/npcs/dorcan_twohills.yaml
+++ b/npcs/dorcan_twohills.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -467,50 +467,113 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Strength
+    - Wisdom
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
     skills:
-    - Firbolg Abilities:
-      - Firbolg Magic: You can cast Detect Magic and Disguise Self with this trait, using Wisdom as your spellcasting ability for them. Once you cast either spell, you can't cast it again with this trait until you finish a
-                       short or long rest. When you use this version of disguise self, you can seem up to 3 feet shorter than normal, allowing you to more easily blend in with humans and elves.
-        Hidden Step: As a bonus action, you can magically turn invisible until the start of your next turn or until you attack, make a damage roll, or force someone to make a saving throw. Once you use this trait, you can't
-                      use it again until you finish a short or long rest.
-        Powerful Build: You count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
-        Speech of Beast and Leaf: You have the ability to communicate in a limited manner with beasts and plants. They can understand the meaning of your words, though you have no special ability to understand them in return.
-      Cleric Abilities:
-      - Spellcasting:
-        - Description: DC 15
-          Cantrips: Guidance, Sacred Flame, Thaumaturgy, Resistance
-          1st Level: Bless, Sancturay, Purify Food and Water, Detect Poison and Disease
-          2nd Level: Calm Emotions, Prayer of Healing, Lesser Restoration
-          3rd Level: Create Food and Water, Remove Curse, Speak with Dead
-          4th Level: Banishment, Divination 
-        Channel Divinity: Turn Undead, Destroy Undead
-      Grave Domain Abilities:
-      - Circle of Mortality: you gain the ability to manipulate the line between life and death. When you would normally roll one or more dice to restore hit points with a spell to a creature at 0 hit points, you instead use
-                             the highest number possible for each die. In addition, you learn the Spare the Dying cantrip, which doesn't count against the number of cleric cantrips you know. For you, it has a range of 30 feet,
-                             and you can cast it as a bonus action
-        Eyes of the Grave: you gain the ability to occasionally sense the presence of the undead, whose existence is an insult to the natural cycle of life. As an action, you can open your awareness to magically detect undead.
-                           Until the end of your next turn, you know the location of any undead within 60 feet of you that isn't behind total cover and that isn't protected from divination magic. This sense doesn't tell you
-                           anything about a creature's capabilities or identity. You can use this feature a number of times equal to your Wisdom modifier
-        Path to the Grave:  you can use your Channel Divinity to mark another creature’s life force for termination. As an action, you choose one creature you can see within 30 feet of you, cursing it until the end of your
-                            next turn. The next time you or an ally of yours hits the cursed creature with an attack, the creature has vulnerability to all of that attack's damage, and then the curse ends.
-        Sentinel at Deaths Door: you gain the ability to impede death’s progress. As a reaction when you or an ally that you can see within 30 feet of you suffers a critical hit, you can turn that attack into a normal hit.
-                                 Any effects triggered by a critical hit are canceled. You can use this feature a number of times equal to your Wisdom modifier
-        Potent Spellcasting: you add your Wisdom modifier to the damage you deal with any cleric cantrip
-        Spellcasting: 
-        - Description: DC 15
-          1st Level: Bane, False Life
-          3rd Level: Gentle Repose, Ray of Enfeeblement
-          5th Level: Revivify, Vampiric Touch
-          7th Level: Blight, Death Ward 
+    - Undertaking and Burial Rites
+    proficiencies:
+    - Arcana
+    - Perception
+    - Religion    
+    - History
+  special-abilities:
+  - title: Firbolg Abilities
+  - abilities: 
+    - title: Firbolg Magic
+    - content: You can cast Detect Magic and Disguise Self with this trait, using Wisdom as your spellcasting ability for them. Once you cast either spell, you can't cast it again with this trait until you finish a
+               short or long rest. When you use this version of disguise self, you can seem up to 3 feet shorter than normal, allowing you to more easily blend in with humans and elves.           
+    - title: Hidden Step
+    - content: As a bonus action, you can magically turn invisible until the start of your next turn or until you attack, make a damage roll, or force someone to make a saving throw. Once you use this trait, you can't
+               use it again until you finish a short or long rest.
+    - title: Powerful Build
+    - content: You count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
+    - title: Speech of Beast and Leaf
+    - content: You have the ability to communicate in a limited manner with beasts and plants. They can understand the meaning of your words, though you have no special ability to understand them in return.
+               You have advantage on all Charisma checks you make to influence them
+  - title: Cleric Abilities
+  - abilities:
+  - title: Cleric Spellcasting
+  - abilities: 
+    - title: Spell DC
+    - content: 15
+    - title: Cantrips
+    - content: Guidance, Sacred Flame, Thaumaturgy, Resistance
+    - title: 1st Level
+    - content: Bless, Sancturay, Purify Food and Water, Detect Poison and Disease
+    - title: 2nd Level
+    - content: Calm Emotions, Prayer of Healing, Lesser Restoration
+    - title: 3rd Level
+    - content: Create Food and Water, Remove Curse, Speak with Dead
+    - title: 4th Level
+    - content: Banishment, Divination 
+  - title: Channel Divinity
+  - abilities:    
+    - title: Turn Undead
+    - content: As an action, you present your holy Symbol and speak a prayer censuring the Undead. Each Undead that can see or hear you within 30 feet of you must make a Wisdom saving throw. If the creature fails its saving 
+               throw, it is turned for 1 minute or until it takes any damage. A turned creature must spend its turns trying to move as far away from you as it can, and it can't willingly move to a space within 30 feet of you. 
+               It also can't take Reactions. For its action, it can use only the Dash action or try to Escape from an Effect that prevents it from moving. If there's nowhere to move, the creature can use the Dodge action.    
+    - title: Destroy Undead
+    - content: Starting at 5th Level, when an Undead of CR 1/2 or lower fails its saving throw against Your Turn Undead feature, the creature is instantly destroyed.
+  - title: Grave Domain Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content:
+    - title: 1st Level
+    - content: Bane, False Life
+    - title: 3rd Level
+    - content: Gentle Repose, Ray of Enfeeblement
+    - title: 5th Level
+    - content: Revivify, Vampiric Touch
+    - title: 7th Level
+    - content: Blight, Death Ward 
+    - title: Circle of Mortality
+    - content: You gain the ability to manipulate the line between life and death. When you would normally roll one or more dice to restore hit points with a spell to a creature at 0 hit points, you instead use 
+               the highest number possible for each die. In addition, you learn the Spare the Dying cantrip, which doesn't count against the number of cleric cantrips you know. For you, it has a range of 30 feet, 
+               and you can cast it as a bonus action.   
+    - title: Eyes of the Grave
+    - content: You gain the ability to occasionally sense the presence of the undead, whose existence is an insult to the natural cycle of life. As an action, you can open your awareness to magically detect undead. 
+               Until the end of your next turn, you know the location of any undead within 60 feet of you that isn't behind total cover and that isn't protected from divination magic. This sense doesn't tell you 
+               anything about a creature's capabilities or identity. You can use this feature a number of times equal to your Wisdom modifier (minimum of once). You regain all expended uses when you finish a long 
+               rest.
+    - title: Channel Divinity - Path to the Grave
+    - content: You can use your Channel Divinity to mark another creature’s life force for termination. As an action, you choose one creature you can see within 30 feet of you, cursing it until 
+               the end of your next turn. The next time you or an ally of yours hits the cursed creature with an attack, the creature has vulnerability to all of that attack's damage, and then the
+               curse ends.
+    - title: Sentinel at Deaths Door
+    - content: You gain the ability to impede death’s progress. As a reaction when you or an ally that you can see within 30 feet of you suffers a critical hit, you can turn that attack into a normal hit. Any 
+               effects triggered by a critical hit are canceled. You can use this feature a number of times equal to your Wisdom modifier (minimum of once). You regain all expended uses when you finish a long 
+               rest.
+    - title: Potent Spellcasting
+    - content: You add your Wisdom modifier to the damage you deal with any cleric cantrip.
+  - title: Undertaker Abilities
+  - abilities:
+    - title: Skill Proficiencies
+    - content: Medicine, Religion, Burial Rites, Investigation, History, Burial Rites, Insight,
+    - title: Tool Proficiencies
+    - content: Carpenter's Tools, Stonecarver's Tools, Disguise Kit, Alchemist Kit, Sewnig Kit, Medical Kit
+    - title: Funeral Network
+    - content: Well connected in circles dealing with funerals ie. florists, carriages, churches, other undertakers and advantage on persuasion in dealing with them
+    - title: Coroner
+    - content: Has advantage when trying to determine cause and/or time of death
 
-    special-abilities:
-    - Proficiencies: He is exceptional at preparing bodies for funerals and burial
-    attacks: |
-      1 attacks
-    combat-tactics: |
-      He does not if at all even slightly possible
-    special-equipment:
-    - Shovel of Digging
+  - title: Attacks
+  - content: 1 attacks
+  - title: Combat Tactics
+  - content: He does not if at all even slightly possible
+  
+  - title: Special Equipment
+  - abilities:
+    - title: Shovel of Digging
+    - content: When wielding this shovel you gain an effective burrow speed of 5 ft. You can choose to leave spaces in your wake equal to the size of your square
 
   profile:
 
