--- a/npcs/dakeelek.yaml
+++ b/npcs/dakeelek.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: aarakocra
+    race: Aarakocra
 
     #
     # The sub-race can be anything.
@@ -458,35 +458,66 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Wisdom
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
     skills:
-    - Aarakocra Traits:
-      - Flight: Flying speed is 50 feet
-        Talons: Proficiency in Unarmed Strikes, doing 1d4 slashing damage
-      Druid Abilities:
-      - Druidic: You know Druidic, the Secret language of druids. You can speak the language and use it to leave hidden messages. You and others who know this language automatically spot such a Message. Others spot the 
-                 message's presence with a successful DC 15 Wisdom (Perception) check but can't decipher it without magic.
-        Spellcasting: 
-        - Description: DC
-          Cantrips: Guidance, Resistance 
-          1st Level: Cure Wound, Goodberry, Healing Word, Purify Food and Water
-          2nd Level: Heat Metal, Lesser Restoration
-        Wild Shape: you can use your action to magically assume the shape of a beast that you have seen before. You can use this feature twice. You regain expended uses when you finish a short or Long Rest. Your druid level 
-                    determines the Beasts you can transform into, as shown in the Beast Shapes table. At 2nd Level, for example, you can transform into any beast that has a Challenge Rating of 1/4 or lower that doesn't have
-                    flying or Swimming speed. You can stay in a beast shape for a number of hours equal to half your druid level (rounded down). You then revert to your normal form unless you expend another use of this feature. 
-                    You can revert to your normal form earlier by using a Bonus Action on Your Turn. You automatically revert if you fall Unconscious, drop to 0 Hit Points, or die 
-      Circle of Dreams Abilities:
-      - Balm of the Summer Court: you become imbued with the blessings of the Summer Court. You are a font of energy that offers respite from injuries. You have a pool of fey energy represented by a number of d6s equal to your
-                                  druid level. As a bonus action, you can choose an ally you can see within 120 feet of you and spend a number of those dice equal to half your druid level or less. Roll the spent dice and add them 
-                                  together. The target regains a number of hit points equal to the total. The target also gains 1 temporary hit point per die spent
-
-    special-abilities:
-    - Proficiencies: Herbalsim, Nature, Medicine    
-    attacks: |
-      N/A
-    combat-tactics: |
-      N/A
-    special-equipment:
-    - Various potions and herbal remedies
+    - Herbalism
+    proficiencies:
+    - Arcana
+    - Perception
+    - Nature    
+    - Medicine
+    - Herbalism
+  special-abilities:
+  - title: Aarakocra Abilities
+  - abilities: 
+    - title: Flight
+    - content: Flying speed is 50 feet
+    - title: Talons
+    - content: Proficiency in Unarmed Strikes, doing 1d4 slashing damage
+  - title: Druid Abilities
+  - abilities:
+  - title: Druid Spellcasting
+  - abilities: 
+    - title: Spell DC
+    - content: 15
+    - title: Cantrips
+    - content:: Guidance, Resistance 
+    - title: 1st Level
+    - content: Cure Wound, Goodberry, Healing Word, Purify Food and Water
+    - title: 2nd Level
+    - content: Heat Metal, Lesser Restoration
+    - title: Druidic
+    - content: You know Druidic, the Secret language of druids. You can speak the language and use it to leave hidden messages. You and others who know this language automatically spot such a Message. Others spot the 
+               message's presence with a successful DC 15 Wisdom (Perception) check but can't decipher it without magic.
+    - title: Wild Shape
+    - content: You can use your action to magically assume the shape of a beast that you have seen before. You can use this feature twice. You regain expended uses when you finish a short or Long Rest. Your druid level 
+               determines the Beasts you can transform into, as shown in the Beast Shapes table. At 2nd Level, for example, you can transform into any beast that has a Challenge Rating of 1/4 or lower that doesn't have a 
+               flying or Swimming speed. You can stay in a beast shape for a number of hours equal to half your druid level (rounded down). You then revert to your normal form unless you expend another use of this feature. 
+               You can revert to your normal form earlier by using a Bonus Action on Your Turn. You automatically revert if you fall Unconscious, drop to 0 Hit Points, or die 
+  - title: Circle of Dreams Abilities
+  - abilities: 
+    - title: Balm of the Summer Court
+    - content: You become imbued with the blessings of the Summer Court. You are a font of energy that offers respite from injuries. You have a pool of fey energy represented by a number of d6s equal to your 
+               druid level. As a bonus action, you can choose an ally you can see within 120 feet of you and spend a number of those dice equal to half your druid level or less. Roll the spent dice and add 
+               them together. The target regains a number of hit points equal to the total. The target also gains 1 temporary hit point per die spent. You regain the expended dice when you finish a long rest.
+    
+  - title: Attacks
+  - content: 1 attack
+  - title: Combat Tactics
+  - content: will generally avoid fighting, but if required will attack with spells or in Wildshape
+  
+  - title: Special Equipment
+  - abilities:
+    - title: Herbalist Potions
+    - content: Various potions and herbal remedies
 
   profile:
 
